Initial implementation for metrics